Fix highlight overflow

--- a/source/css/_partial/base.styl
+++ b/source/css/_partial/base.styl
@@ -76,7 +76,8 @@ blockquote
   margin: 1em 0
   font-size: .75em
   background-color: $grey-3
-  overflow: auto
+  overflow-x: auto
+  overflow-y: hidden
 
   table
     width: 100%
